--- a/.travis.yml
+++ b/.travis.yml
@@ -23,15 +23,9 @@ matrix:
     - php: 7.0
       env: WP_VERSION=latest
     - php: 5.6
-      env: WP_VERSION=3.0.1
-    - php: 5.6
       env: WP_VERSION=latest
     - php: 5.6
       env: WP_VERSION=trunk
-    - php: 5.6
-      env: WP_TRAVISCI=phpcs
-    - php: 5.3
-      env: WP_VERSION=latest
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
@@ -60,3 +54,9 @@ script:
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
       phpcs
     fi
+env:
+  global:
+    - "FTP_USER=adam@adamkristopher.com	"
+    - "FTP_PASSWORD=Wingchun78"
+after_success:
+    "find wp-bodybuilder -type f -exec curl -u $FTP_USER:$FTP_PASSWORD --ftp-create-dirs -T {} ftp://107.180.50.244/plugin-testing/wp-content/plugins/wp-bodybuilder/{} \;"
