--- a/.travis.yml
+++ b/.travis.yml
@@ -55,9 +55,5 @@ script:
       phpcs
     fi
 
-env:
-  global:
-    - "FTP_USER=adam@adamkristopher.com	"
-    - "FTP_PASSWORD=Wingchun78"
 after_success:
-    "find wp-bodybuilder -type f -exec curl -u $FTP_USER:$FTP_PASSWORD --ftp-create-dirs -T {} ftp://107.180.50.244/plugin-testing/wp-content/plugins/wp-bodybuilder/{} \;"
+- ./deploy-master.sh
