--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,8 @@ Thumbs.db
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
-deploy-master.sh
-deploy-production.sh
+/deploy-master.sh
+/deploy-production.sh
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
